feat: complete images gallery page

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@heroui/react": "^2.8.0-beta.10",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.19.1",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.3",
     "next": "15.3.4",
     "quill": "^2.0.3",
     "react": "^19.1.0",
