--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-lite-youtube-embed": "^2.5.1",
     "react-quill-new": "^3.4.6",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
