--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.523.0",
     "motion": "^12.23.3",
     "next": "15.3.4",
@@ -24,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-lite-youtube-embed": "^2.5.1",
     "react-quill-new": "^3.4.6",
     "react-slick": "^0.30.3",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
