refactor: update apparatus data

--- a/public/datas/apparatus/apparatus-list.json
+++ b/public/datas/apparatus/apparatus-list.json
@@ -3,35 +3,49 @@
         "name": "Aan Maryani",
         "role": "Kepala Desa",
         "periode": "21 Juli - Sekarang",
-        "desc": "Meutya Viada Hafid, lulusan New South Wales University (2001) S1 Bidang Manufacturing Engineering dan Universitas Indonesia (2018) S2 Ilmu Politik. Pernah menjabat sebagai Ketua Komisi I Dewan Perwakilan Rakyat RI sejak 2019. Selama memimpin sebagai Ketua Komisi I DPR RI pada 2019-2024, ia telah menghasilkan 13 Undang-Undang. Sejak 2010 menjabat sebagai Anggota DPR RI dari Partai Golongan Karya dengan daerah pemilihan Sumatera Utara. Sebelumnya, bekerja sebagai jurnalis di Metro TV dan menjadi pembawa acara di beberapa acara televisi. Pernah disandera selama tujuh hari pada 2005 oleh sekelompok pria bersenjata ketika sedang bertugas di Irak. Pada tanggal 28 September 2007, Meutya melaunching buku yang ia tulis sendiri, yaitu 168 Jam dalam Sandera: Memoar Seorang Jurnalis yang Disandera di Irak. Pada 11 Oktober 2007, Meutya Hafid terpilih sebagai pemenang Penghargaan Jurnalistik Elizabeth O'Neill, dari Australia. Pernah dinobatkan menjadi satu di antara lima Tokoh Pers Inspiratif Indonesia versi Mizan dan menjadi satu-satunya perempuan termuda meraih penghargaan tersebut. Lahir 3 Mei 1978, putri daerah Soppeng, Sulawesi Selatan ini aktif dalam Partai Golkar sejak 2016 dan Ormas MKGR sejak 2020.",
-        "image_url": "/datas/apparatus/images/1.JPG"
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/aan.jpg"
     },
     {
-        "name": "Aan Maryani",
-        "role": "Kepala Desa",
+        "name": "Mas'ut",
+        "role": "Sekretaris Desa",
         "periode": "21 Juli - Sekarang",
-        "desc": "Meutya Viada Hafid, lulusan New South Wales University (2001) S1 Bidang Manufacturing Engineering dan Universitas Indonesia (2018) S2 Ilmu Politik. Pernah menjabat sebagai Ketua Komisi I Dewan Perwakilan Rakyat RI sejak 2019. Selama memimpin sebagai Ketua Komisi I DPR RI pada 2019-2024, ia telah menghasilkan 13 Undang-Undang. Sejak 2010 menjabat sebagai Anggota DPR RI dari Partai Golongan Karya dengan daerah pemilihan Sumatera Utara. Sebelumnya, bekerja sebagai jurnalis di Metro TV dan menjadi pembawa acara di beberapa acara televisi. Pernah disandera selama tujuh hari pada 2005 oleh sekelompok pria bersenjata ketika sedang bertugas di Irak. Pada tanggal 28 September 2007, Meutya melaunching buku yang ia tulis sendiri, yaitu 168 Jam dalam Sandera: Memoar Seorang Jurnalis yang Disandera di Irak. Pada 11 Oktober 2007, Meutya Hafid terpilih sebagai pemenang Penghargaan Jurnalistik Elizabeth O'Neill, dari Australia. Pernah dinobatkan menjadi satu di antara lima Tokoh Pers Inspiratif Indonesia versi Mizan dan menjadi satu-satunya perempuan termuda meraih penghargaan tersebut. Lahir 3 Mei 1978, putri daerah Soppeng, Sulawesi Selatan ini aktif dalam Partai Golkar sejak 2016 dan Ormas MKGR sejak 2020.",
-        "image_url": "/datas/apparatus/images/1.JPG"
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/masut.jpg"
     },
     {
-        "name": "Aan Maryani",
-        "role": "Kepala Desa",
+        "name": "Dusen Sasmita",
+        "role": "Kaur Umum Perencanaan",
         "periode": "21 Juli - Sekarang",
-        "desc": "Meutya Viada Hafid, lulusan New South Wales University (2001) S1 Bidang Manufacturing Engineering dan Universitas Indonesia (2018) S2 Ilmu Politik. Pernah menjabat sebagai Ketua Komisi I Dewan Perwakilan Rakyat RI sejak 2019. Selama memimpin sebagai Ketua Komisi I DPR RI pada 2019-2024, ia telah menghasilkan 13 Undang-Undang. Sejak 2010 menjabat sebagai Anggota DPR RI dari Partai Golongan Karya dengan daerah pemilihan Sumatera Utara. Sebelumnya, bekerja sebagai jurnalis di Metro TV dan menjadi pembawa acara di beberapa acara televisi. Pernah disandera selama tujuh hari pada 2005 oleh sekelompok pria bersenjata ketika sedang bertugas di Irak. Pada tanggal 28 September 2007, Meutya melaunching buku yang ia tulis sendiri, yaitu 168 Jam dalam Sandera: Memoar Seorang Jurnalis yang Disandera di Irak. Pada 11 Oktober 2007, Meutya Hafid terpilih sebagai pemenang Penghargaan Jurnalistik Elizabeth O'Neill, dari Australia. Pernah dinobatkan menjadi satu di antara lima Tokoh Pers Inspiratif Indonesia versi Mizan dan menjadi satu-satunya perempuan termuda meraih penghargaan tersebut. Lahir 3 Mei 1978, putri daerah Soppeng, Sulawesi Selatan ini aktif dalam Partai Golkar sejak 2016 dan Ormas MKGR sejak 2020.",
-        "image_url": "/datas/apparatus/images/1.JPG"
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/dusen.jpg"
     },
     {
-        "name": "Aan Maryani",
-        "role": "Kepala Desa",
+        "name": "Yayan Mulyana",
+        "role": "Kaur Keuangan",
         "periode": "21 Juli - Sekarang",
-        "desc": "Meutya Viada Hafid, lulusan New South Wales University (2001) S1 Bidang Manufacturing Engineering dan Universitas Indonesia (2018) S2 Ilmu Politik. Pernah menjabat sebagai Ketua Komisi I Dewan Perwakilan Rakyat RI sejak 2019. Selama memimpin sebagai Ketua Komisi I DPR RI pada 2019-2024, ia telah menghasilkan 13 Undang-Undang. Sejak 2010 menjabat sebagai Anggota DPR RI dari Partai Golongan Karya dengan daerah pemilihan Sumatera Utara. Sebelumnya, bekerja sebagai jurnalis di Metro TV dan menjadi pembawa acara di beberapa acara televisi. Pernah disandera selama tujuh hari pada 2005 oleh sekelompok pria bersenjata ketika sedang bertugas di Irak. Pada tanggal 28 September 2007, Meutya melaunching buku yang ia tulis sendiri, yaitu 168 Jam dalam Sandera: Memoar Seorang Jurnalis yang Disandera di Irak. Pada 11 Oktober 2007, Meutya Hafid terpilih sebagai pemenang Penghargaan Jurnalistik Elizabeth O'Neill, dari Australia. Pernah dinobatkan menjadi satu di antara lima Tokoh Pers Inspiratif Indonesia versi Mizan dan menjadi satu-satunya perempuan termuda meraih penghargaan tersebut. Lahir 3 Mei 1978, putri daerah Soppeng, Sulawesi Selatan ini aktif dalam Partai Golkar sejak 2016 dan Ormas MKGR sejak 2020.",
-        "image_url": "/datas/apparatus/images/1.JPG"
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/yayan.jpg"
     },
     {
-        "name": "Aan Maryani",
-        "role": "Kepala Desa",
+        "name": "Kustiwa",
+        "role": "Kasi Pemerintahan",
         "periode": "21 Juli - Sekarang",
-        "desc": "Meutya Viada Hafid, lulusan New South Wales University (2001) S1 Bidang Manufacturing Engineering dan Universitas Indonesia (2018) S2 Ilmu Politik. Pernah menjabat sebagai Ketua Komisi I Dewan Perwakilan Rakyat RI sejak 2019. Selama memimpin sebagai Ketua Komisi I DPR RI pada 2019-2024, ia telah menghasilkan 13 Undang-Undang. Sejak 2010 menjabat sebagai Anggota DPR RI dari Partai Golongan Karya dengan daerah pemilihan Sumatera Utara. Sebelumnya, bekerja sebagai jurnalis di Metro TV dan menjadi pembawa acara di beberapa acara televisi. Pernah disandera selama tujuh hari pada 2005 oleh sekelompok pria bersenjata ketika sedang bertugas di Irak. Pada tanggal 28 September 2007, Meutya melaunching buku yang ia tulis sendiri, yaitu 168 Jam dalam Sandera: Memoar Seorang Jurnalis yang Disandera di Irak. Pada 11 Oktober 2007, Meutya Hafid terpilih sebagai pemenang Penghargaan Jurnalistik Elizabeth O'Neill, dari Australia. Pernah dinobatkan menjadi satu di antara lima Tokoh Pers Inspiratif Indonesia versi Mizan dan menjadi satu-satunya perempuan termuda meraih penghargaan tersebut. Lahir 3 Mei 1978, putri daerah Soppeng, Sulawesi Selatan ini aktif dalam Partai Golkar sejak 2016 dan Ormas MKGR sejak 2020.",
-        "image_url": "/datas/apparatus/images/1.JPG"
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/kustiwa.jpg"
+    },
+    {
+        "name": "Mila Nurlailajaya",
+        "role": "Kaur Keuangan",
+        "periode": "21 Juli - Sekarang",
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/mila.jpg"
+    },
+    {
+        "name": "Jana",
+        "role": "Kasi Pelayanan",
+        "periode": "21 Juli - Sekarang",
+        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "image_url": "/images/perangkat-desa/jana.jpg"
     }
 ]
