--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-leaflet": "^5.0.0-rc.2",
     "react-lite-youtube-embed": "^2.5.1",
     "react-quill-new": "^3.4.6",
+    "react-responsive": "^10.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1"
