--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-responsive": "^10.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "yet-another-react-lightbox": "^3.24.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
