refactor: update apparatus background

--- a/public/datas/apparatus/apparatus-list.json
+++ b/public/datas/apparatus/apparatus-list.json
@@ -2,50 +2,50 @@
     {
         "name": "Aan Maryani",
         "role": "Kepala Desa",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "21 April 2021 - Sekarang",
+        "desc": "Lahir di Karawang pada 4 Januari 1979, merupakan Kepala Desa Kutamukti. Beliau menyelesaikan pendidikan tingkat SMA pada tahun 2023. Diangkat melalui SK Nomor 141.1/Kep.245-Huk/2021 pada tanggal 21 April 2021. Aktif sebagai Kepala Desa perempuan, Aan dikenal dekat dengan masyarakat dan berkomitmen terhadap pembangunan desa. Ia memiliki latar belakang keagamaan Islam dan berdomisili di Karawang.",
         "image_url": "/images/perangkat-desa/aan.jpg"
     },
     {
         "name": "Mas'ut",
         "role": "Sekretaris Desa",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "8 Juni 2021 - Sekarang",
+        "desc": "Lahir di Karawang pada 5 Oktober 1974, menjabat sebagai Sekretaris Desa. Ia lulus SMA pada tahun 1994 dan mulai menjabat berdasarkan SK Nomor 141.3/Kep.06-Ds/2021 sejak 8 Juni 2021. Dengan pengalaman administratif yang panjang, Mas’ut memegang peran penting dalam tata kelola pemerintahan desa. Ia dikenal sebagai sosok yang disiplin dan berpengalaman dalam birokrasi.",
         "image_url": "/images/perangkat-desa/masut.jpg"
     },
     {
         "name": "Dusen Sasmita",
         "role": "Kaur Umum Perencanaan",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "8 Juni 2021 - Sekarang",
+        "desc": "Lahir di Karawang pada 8 Juli 1983, menjabat sebagai Kaur Umum dan Perencanaan. Ia lulus SMA tahun 2002 dan mulai aktif dalam jabatan sejak 8 Juni 2021 berdasarkan SK Nomor 141.3/Kep.06-Ds/2021. Dusen dikenal cekatan dalam perencanaan program dan pengelolaan administrasi desa.",
         "image_url": "/images/perangkat-desa/dusen.jpg"
     },
     {
         "name": "Yayan Mulyana",
         "role": "Kaur Keuangan",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "2 September 2024 - Sekarang",
+        "desc": "Lahir di Karawang pada 1 Juni 1979, adalah Kasi Kesejahteraan Desa Kutamukti. Ia menyelesaikan pendidikan SMA pada tahun 2015 dan diangkat pada tanggal 2 September 2024 berdasarkan SK Nomor 141.3/Kep.13-Ds/2024. Berpengalaman di bidang sosial kemasyarakatan, Yayan aktif dalam berbagai program kesejahteraan warga.",
         "image_url": "/images/perangkat-desa/yayan.jpg"
     },
     {
         "name": "Kustiwa",
         "role": "Kasi Pemerintahan",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "8 Juni 2021 - Sekarang",
+        "desc": "Lahir di Karawang pada 8 September 1979, mengemban tugas sebagai Kasi Pemerintahan. Ia merupakan lulusan SMA tahun 1998 dan diangkat pada 8 Juni 2021 berdasarkan SK Nomor 141.3/Kep.06-Ds/2021. Kustiwa memiliki kemampuan koordinasi yang baik dengan pihak kecamatan maupun lembaga desa lainnya.",
         "image_url": "/images/perangkat-desa/kustiwa.jpg"
     },
     {
         "name": "Mila Nurlailajaya",
         "role": "Kaur Keuangan",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "2 September 2024 - Sekarang",
+        "desc": "Lahir pada 10 Oktober 1996 di Karawang, menjabat sebagai Kasi Kesejahteraan. Ia merupakan lulusan SMA tahun 2015 dan diangkat pada tanggal 2 September 2024 berdasarkan SK Nomor 141.3/Kep.13-Ds/2024. Mila dikenal aktif dalam program pemberdayaan masyarakat dan kesejahteraan keluarga.",
         "image_url": "/images/perangkat-desa/mila.jpg"
     },
     {
         "name": "Jana",
         "role": "Kasi Pelayanan",
-        "periode": "21 Juli - Sekarang",
-        "desc": "Lorem ipsum Machoke evolved into Machamp. Kindler spotted Golduck in Unova. Vaporeon is a Bubble Jet Pokémon. Youth Athlete took Route 48 from Johto Safari Zone to Route 47. Team Magma Grunt took Route 33 from Azalea Town to Union Cave. You can earn the Freeze Badge at Icirrus Gym. Sightseer spotted Diglett in Hoenn.",
+        "periode": "8 Juni 2021 - Sekarang",
+        "desc": "Lahir di Karawang pada 10 Maret 1992, adalah Kasi Pelayanan yang dikenal dekat dengan masyarakat desa. Ia menyelesaikan SMA pada tahun 2011 dan diangkat melalui SK Nomor 141.3/Kep.06-Ds/2021 pada 8 Juni 2021. Jana aktif dalam pelayanan publik dan penyelenggaraan kegiatan sosial desa.",
         "image_url": "/images/perangkat-desa/jana.jpg"
     }
 ]
